[project]
name = "matplotlib-backend-cache"
version = "0.1.0"
description = "save matplotlib plots to a cache instead of showing them in ipython"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Framework :: Matplotlib",
    "Topic :: Terminals",
]
dependencies = [ "matplotlib" ]

[project.urls]
"Homepage" = "https://github.com/ctorney/matplotlib-backend-cache"
"Bug Tracker" = "https://github.com/ctorney/matplotlib-backend-cache/issues"

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "." ]
